<resources>
    <string name="app_name">Tenderos</string>
    <string name="storeBag">Tienda</string>
    <string name="title">The Red Store</string>
    <string name="tendero">Opcion Tendero</string>
    <string name="cliente">Opcion Cliente</string>
    <string name="title_activity_tenderos">Tenderos</string>
    <string name="title_activity_clientes">Clientes</string>
    <string name="title_activity_agregar_producto">AgregarProducto</string>
    <string name="tipo">Tipo de Producto</string>
    <string name="nombre">Nombre de Producto</string>
    <string name="cantidad">Cantidad</string>
    <string name="precio">Precio Unitario</string>
    <string name="precio_total">Total</string>
    <string name="guardar">Guardar</string>
    <string name="limpiar">Limpiar</string>
    <string name="agregar">Registrar Producto</string>
    <string name="dollar">COP$</string>
    <string name="lista_productos">Lista de Productos</string>
    <string name="title_activity_lista_productos">Lista de Productos</string>
    <string name="title_activity_lista_compra">Lista de Compras</string>
    <string-array name="tipos">
        <item>Carnes</item>
        <item>Comida Varios</item>
        <item>Aseo Personal</item>
        <item>Productos de Limpieza</item>
        <item>Miscelanea</item>
        <item>Bebidas no Alcoholicas</item>
        <item>Licores</item>
        <item>Panaderia</item>
        <item>Otro</item>
    </string-array>
    <string-array name="unidad_medidas">
        <item>Libras</item>
        <item>Kilos</item>
        <item>Unidades</item>
        <item>Litros</item>
        <item>ml</item>
    </string-array>
    <string name="registro_exitoso">Producto registrado exitosamente!</string>
    <string name="disponibles">Unidades Disponibles</string>
    <string name="dollar1">Dólares</string>
    <string name="peso">COP</string>
    <string name="eliminar">Eliminar Producto</string>
    <string name="pregunta_eliminacion">¿Está seguro de eliminar éste producto?</string>
    <string name="positivo">Aceptar</string>
    <string name="negativo">Cancelar</string>
    <string name="title_activity_cliente_main">ClienteMain</string>
    <string name="carrito">Agregar al Carrito</string>
    <string name="ingrese_cantidad">Ingrese Cantidad</string>
    <string name="agregado">Producto agregado</string>
    <string name="title_activity_carrito">Carrito</string>
    <string name="carrito_title">Carrito</string>
    <string name="eliminar_carrito">Eliminar</string>
    <string name="cantidad_productos_carrito">Cantidad de productos en el carrito</string>
    <string name="comprar">Guardar Compra</string>
    <string name="carrito_vacio">El carrito está vacio</string>
    <string name="client_name">Nombre para la compra</string>
    <string name="compra_exitosa">A punto de registrar su compra, confirme.</string>
    <string name="confirma_compra">Confirmar Compra</string>
    <string name="nombre_cliente">Nombre del cliente</string>
    <string name="productos_comprados">Total productos comprados</string>
    <string name="error_nombre_producto">Ingrese nombre del producto!</string>
    <string name="error_cantidad">Ingrese una cantidad válida!</string>
    <string name="error_precio">Ingrese un precio válido!</string>
    <string name="error_existencias">No hay existencias!</string>
    <string name="error_carrito">El producto ya existe en el carrito</string>
    <string name="error_nombre_cliente">Nombre no válido</string>
</resources>
